# omn-sprites-player

./: .gitignore  .gitlab-ci.yml  Cargo.toml  MainForm.ui.qml  bindings.json  main.qml  qml.qrc
src/: fs.rs  implementation.rs  main.cpp  main.rs  store.rs
view/: FilePicker.qml  main.qml
