[package]
name = "omn-sprite-viewer"
version = "0.1.0"
build = "build.rs"
links = "qt_quick_cargo"
edition = "2018"

[dependencies]
libc = "*"
omn-sprites = "0.1.0"
lazy_static = "1.2.0"
serde_json = "1.0.33"
log = "0.4.6"
simple_logger = "1.0.1"
failure = "0.1.3"

[build-dependencies]
rust_qt_binding_generator = "~0.2.0"
